--- a/content/publications/hello.yaml
+++ b/content/publications/hello.yaml
@@ -6,6 +6,6 @@ description: Sustainability (SSCI/SCIE), vol. 10, no. 9, pp. 3001, 2018.
 link: https://dl.acm.org/citation.cfm?id=3312865/
 code: https://github.com/CCI-MIT/minglr
 featured: 🏆 Won Honorable Mention Award (Top 5% among submissions) 🏆
-slides: 
-videos: 
+slides: aaaa
+videos: aaaa
 slug: migling
