--- a/content/publications/mingle.yaml
+++ b/content/publications/mingle.yaml
@@ -1,9 +1,8 @@
 classification: Conference
 publishedDate: 2021. 03. 01.
-title: Online Mingling - Supporting Ad Hoc, Private Conversations at Virtual Conferences
+title: hello hahahaha rararara hihihihi
 author: Jaeyoon Song, Christoph Riedl, Thomas Malone
 description: Sustainability (SSCI/SCIE), vol. 10, no. 9, pp. 3001, 2018.
-link: https://dl.acm.org/citation.cfm?id=3312865/
 code: https://github.com/CCI-MIT/minglr
 featured: 🏆 Won Honorable Mention Award (Top 5% among submissions) 🏆
 slides: aaaa
