--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
