--- a/content/publications/fair.yaml
+++ b/content/publications/fair.yaml
@@ -2,6 +2,6 @@ classification: Domestic Journals
 publishedDate: 2021. 06.
 title: FAIR 원칙 - 데이터 관점의 디지털 아카이브 구현을 위한 고려사항(FAIR Principles - Considerations for Implementing Digital Archives from a Data Perspective)
 author: 김학래(Haklae Kim)
-description: Journal of Korean Society of Archives and Records Management, vol.21, no.2, pp. 155-172, 2021.
+description: 한국기록관리학회지(Journal of Korean Society of Archives and Records Management), vol.21, no.2, pp. 155-172, 2021.
 link: https://doi.org/10.14404/JKSARM.2021.21.2.155
 slug: fair
