--- a/content/publications/copyright.yaml
+++ b/content/publications/copyright.yaml
@@ -1,4 +1,4 @@
-classification: Articles
+classification: Journals
 publishedDate: 2010. 08. 10
 title: Semantic Representation for Copyright Metadata of User-Generated Content in Folksonomies
 author: H. Kim, J.H. Choi and J. G. Breslin
