--- a/content/publications/enterprise.yaml
+++ b/content/publications/enterprise.yaml
@@ -1,4 +1,4 @@
-classification: Article
+classification: Journals
 publishedDate: 2016. 04.
 title: Towards an Enterprise Entity Hub - Integration of General and Enterprise Knowledge
 author: Haklae Kim, Jeongsoo Lee, Jungyeon Yang
