--- a/content/publications/folksonomies.yaml
+++ b/content/publications/folksonomies.yaml
@@ -1,4 +1,4 @@
-classification: Articles
+classification: Journals
 publishedDate: 2010. 02. 22
 title: Social Semantic Cloud of Tags - Semantic Model for Folksonomies
 author: H. Kim, J. G. Breslin, H.G. Kim, and J.H. Choi
