--- a/content/publications/framework.yaml
+++ b/content/publications/framework.yaml
@@ -1,4 +1,4 @@
-classification: Articles
+classification: Journals
 publishedDate: 2016. 04. 21
 title: Knowledge Extraction Framework for Building a Large-scale Knowledge Base
 author: H. Kim, L. He and Y. Di
