--- a/content/publications/interests.yaml
+++ b/content/publications/interests.yaml
@@ -1,4 +1,4 @@
-classification: Articles
+classification: Journals
 publishedDate: 2011. 5. 12.
 title: Mining and Representing User Interests - the Case of Tagging Practices
 author: H. Kim, S. Scerri, A. Passant J. Breslin, AND H.G. Kim
