--- a/content/publications/kpop.yaml
+++ b/content/publications/kpop.yaml
@@ -1,4 +1,4 @@
-classification: Article
+classification: Journals
 publishedDate: 2017. 05. 17.
 title: Building a K-Pop Knowledge Graph Using the Entertainment Ontology
 author: H. Kim
