--- a/content/publications/sharing.yaml
+++ b/content/publications/sharing.yaml
@@ -1,7 +1,7 @@
-classification: Articles
+classification: Journals
 publishedDate: 2010. 08. 10
 title: Representing and Sharing Folksonomies with Semantics
 author: H. Kim, S. Decker, and J. G. Breslin
 description: Journal of Information Science, Vol. 36. No. 1:57-72, February 2010.
-link: https://www.researchgate.net/publication/220195581_Representing_and_sharing_folksonomies_with_semantics 
+link: https://www.researchgate.net/publication/220195581_Representing_and_sharing_folksonomies_with_semantics
 slug: sharing
