--- a/content/publications/social.yaml
+++ b/content/publications/social.yaml
@@ -1,5 +1,5 @@
-classification: Article
-publishedDate: 2013. 04. 
+classification: Journals
+publishedDate: 2013. 04.
 title: Evolution of Social Networks based on Tagging Practices
 author: H. Kim, J. Breslin, H. Chao and L. Shu
 description: IEEE Transactions on Services Computing pp. 252-261, vol. 6
