--- a/content/publications/tagging.yaml
+++ b/content/publications/tagging.yaml
@@ -1,4 +1,4 @@
-classification: Articles
+classification: Journals
 publishedDate: 2011. 07. 01
 title: Integrating Tagging into the Web of Data - Overview and Combination of Existing Tag Ontologies
 author: H. Kim, S. Scerri, A. Passant J. Breslin, AND H.G. Kim
