--- a/content/members/euntaekseon.yaml
+++ b/content/members/euntaekseon.yaml
@@ -1,6 +1,6 @@
 name: Euntaek Seon
 role: M.A.
-interests: Meta Data, Knowledge Graph
+interests: Metadata, Knowledge Graph
 slug: euntaekseon
 img: euntaekseon.jpeg
 email: euntaekseon@gmail.com
