--- a/content/publications/[IJ]aCombinationalMethod.yaml
+++ b/content/publications/[IJ]aCombinationalMethod.yaml
@@ -1,5 +1,5 @@
 classification: Journals
-publishedDate: 2018. 03.
+publishedDate: 2018.09.30.
 title: A Combinational Method to Determining Identical Entities from Heterogeneous Knowledge Graphs
 author: Haklae Kim
 description: Journal of Information Science Theory and Practice, 6(3), 6–15, 2018.
