--- a/content/publications/[IJ]IntegratingTagging.yaml
+++ b/content/publications/[IJ]IntegratingTagging.yaml
@@ -1,5 +1,5 @@
 classification: Journals
-publishedDate: 2011. 07. 01
+publishedDate: 2011. 01
 title: Integrating Tagging into the Web of Data - Overview and Combination of Existing Tag Ontologies
 author: H. Kim, S. Scerri, A. Passant J. Breslin, AND H.G. Kim
 description: Journal of Internet Technology Vol. 12. No. 4:561-572, July 2011.
