--- a/content/publications/[IJ]TowardASales.yaml
+++ b/content/publications/[IJ]TowardASales.yaml
@@ -1,6 +1,6 @@
 classification: Journals
-publishedDate: 2017. 05.
+publishedDate: 2017. 05. 27.
 title: Towards a sales assistant using a product knowledge graph
 author: Haklae Kim
-description: Journal of Web Semantics, Volumes 46–47, pp.14-19, 2017.
+description: Journal of Web Semantics, Vol. 46–47, pp.14-19, 2017.
 link: https://doi.org/10.1016/j.websem.2017.03.001
