--- a/content/publications/[IG]SocialSemanticCloudOfTags.yaml
+++ b/content/publications/[IG]SocialSemanticCloudOfTags.yaml
@@ -3,5 +3,4 @@ publishedDate: 2010. 02. 22
 title: Social Semantic Cloud of Tags - Semantic Model for Folksonomies
 author: H. Kim, J. G. Breslin, H.G. Kim, and J.H. Choi
 description: Knowledge Management Research & Practice, Vol. 8. No. 3:193-202, September 2009.
-link: https://www.tandfonline.com/doi/full/10.1057/kmrp.2010.10
-slug: folksonomies
+link: https://doi.org/10.1057/kmrp.2010.10
