Update and rename copyright.yaml to [IJ]SemanticRepresentationForCopyright.yaml

--- a/content/publications/[IJ]SemanticRepresentationForCopyright.yaml
+++ b/content/publications/[IJ]SemanticRepresentationForCopyright.yaml
@@ -3,5 +3,4 @@ publishedDate: 2010. 08. 10
 title: Semantic Representation for Copyright Metadata of User-Generated Content in Folksonomies
 author: H. Kim, J.H. Choi and J. G. Breslin
 description: Online Information Review, Vol. 34,  No. 4, pp. 626-641, August 2010.
-link: https://www.researchgate.net/publication/237149454_Semantic_representation_for_copyright_metadata_of_user-generated_content_in_folksonomies
-slug: copyright
+link: https://doi.org/10.1108/14684521011073025
