--- a/content/publications/[DJ]BuildingKnowledgeGraphOfTheKorea.yaml
+++ b/content/publications/[DJ]BuildingKnowledgeGraphOfTheKorea.yaml
@@ -1,6 +1,7 @@
 classification: Domestic Journals
 publishedDate: 2017. 10. 30.
-title: 공공데이터의 의미적 연계를 위한 행정구역 지식 그래프 구축(Building Knowledge Graph of the Korea Administrative District for Interlinking Public Open Data)
+title: 공공데이터의 의미적 연계를 위한 행정구역 지식 그래프 구축
+subtitle: Building Knowledge Graph of the Korea Administrative District for Interlinking Public Open Data
 author: 김학래(Haklae Kim)
 description: 한국컨텐츠학회(Journal of the Korea Contents Association), vol.17, no.12, pp. 1–10, 2017.
 link: https://doi.org/10.5392/JKCA.2017.17.12.001
