--- a/content/publications/[DJ]JapaneseComfortWomen.yaml
+++ b/content/publications/[DJ]JapaneseComfortWomen.yaml
@@ -1,6 +1,7 @@
 classification: Domestic Journals
 publishedDate: 2021. 08. 03.
-title: 일본군 위안부 지식그래프 - 파편화된 디지털 기록의 연결(A Knowledge Graph on Japanese “Comfort Women” - Interlinking Fragmented Digital Archival Resources)
+title: 일본군 위안부 지식그래프 - 파편화된 디지털 기록의 연결
+subtitle: A Knowledge Graph on Japanese “Comfort Women” - Interlinking Fragmented Digital Archival Resources
 author: 박하람(Haram Park), 김학래(Haklae Kim)
 description: 한국기록관리학회지(Journal of Korean Society of Archives and Records Management), vol.21, no.3, pp. 61-78, 2021.
 link: http://dx.doi.org/10.14404/JKSARM.2021.21.3.061
