--- a/content/publications/[DJ]KnowledgeGraphOfDataMap.yaml
+++ b/content/publications/[DJ]KnowledgeGraphOfDataMap.yaml
@@ -1,6 +1,7 @@
 classification: Domestic Journals
 publishedDate: 2021. 03.
-title: 국가 데이터의 의미적 표현과 연계를 위한 데이터맵 지식 모델(A Knowledge Model of Data Map for Semantically Representing National Data)
+title: 국가 데이터의 의미적 표현과 연계를 위한 데이터맵 지식 모델
+subtitle: A Knowledge Model of Data Map for Semantically Representing National Data
 author: 김학래(Haklae Kim)
 description: 디지털콘텐츠학회논문지(Journal of Digital Contents Society), vol.22, no.3, pp. 491-499, 2021.
 link: https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002700383
