--- a/content/publications/[DJ]MethodsForUtilisingLocal.yaml
+++ b/content/publications/[DJ]MethodsForUtilisingLocal.yaml
@@ -1,6 +1,7 @@
 classification: Domestic Journals
 publishedDate: 2021. 03.
 title: 공공데이터포털에 공개된 지방자치단체의 공공데이터 활용 방안
-author: 김동준(D.J. Kim), 김현지(H.J. Kim), 송채은(C.E. Song), 양지우(J.W. Yang), 김학래(H.L. Kim)
+subtitle: Methods for Utilising Local Government’s Public Data Released to The Public Data Portal
+author: 김동준(Dongjun Kim), 김현지(Hyeonji Kim), 송채은(Chaeeun Song), 양지우(Jiwoo Yang), 김학래(Haklae Kim)
 description: 한국디지털컨텐츠학회(Journal of Digital Contents Society), vol. 22, No. 3, pp. 445-452. 2021.
 link: http://doi.org/10.9728/dcs.2021.22.3.445
