--- a/content/publications/[DJ]QualityEvaluation.yaml
+++ b/content/publications/[DJ]QualityEvaluation.yaml
@@ -1,6 +1,7 @@
 classification: Domestic Journals
 publishedDate: 2020. 08.
-title: 공공데이터 개방표준 데이터의 품질 평가(Quality Evaluation of the Open Standard Data)
+title: 공공데이터 개방표준 데이터의 품질 평가
+subtitle: Quality Evaluation of the Open Standard Data
 author: 김학래(Haklae Kim)
 description: 한국콘텐츠학회논문지(Journal of the Korea Contents Association), vol.20, no.9, pp. 439-447, 2021.
 link: https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002633333
