--- a/content/publications/liscourseanalysis.yaml
+++ b/content/publications/liscourseanalysis.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2019. 12. 27.
 title: Course Analysis of Library and Information Science in Korea
-author: Mo, Yelim, Euntaek Seon, Goun Park, and Haklae Kim
-description: Information 2020, 11, 19.
+author: Y. Mo, E. Seon, G. Park, and H. Kim
+description: Information, vol. 11, no. 1, p. 19, Dec. 2019.
 link: https://doi.org/10.3390/info11010019
