--- a/content/publications/[IC]TowardsAnEnterpriseEntityHub.yaml
+++ b/content/publications/[IC]TowardsAnEnterpriseEntityHub.yaml
@@ -1,7 +1,6 @@
-classification: Journals
-publishedDate: 2016. 04.
+classification: Conferences
+publishedDate: 2016. 03. 20.
 title: Towards an Enterprise Entity Hub - Integration of General and Enterprise Knowledge
 author: Haklae Kim, Jeongsoo Lee, Jungyeon Yang
 description: Semantic Technology - 5th Joint International Conference, JIST 2015, Yichang, China, November 11-13, 2015, Revised Selected Papers. Volume 9544 of Lecture Notes in Computer Science, pages 301-310, Springer, 2015
-link: https://www.springerprofessional.de/en/towards-an-enterprise-entity-hub-integration-of-general-and-ente/10156626
-slug: enterprise
+link: http://dx.doi.org/10.1007/978-3-319-31676-5_22
