--- a/content/publications/[IC]AnAgentEnvironment.yaml
+++ b/content/publications/[IC]AnAgentEnvironment.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2007. 05. 31. - 06. 01.
 title: An Agent Environment for Contextualizing Folksonomies in a Triadic Context
 author: H.G. Kim, S.H. Hwang, Y.K. Kang, H. Kim and H.S. Yang
-description: H.G. Kim, S.H. Hwang, Y.K. Kang, H. Kim and H.S. Yang, "An Agent Environment for Contextualizing Folksonomies in a Triadic Context," in KES-AMSTA, 2007, pp. 728-737, doi: 10.1007/978-3-540-72830-6_76.
+description: "An Agent Environment for Contextualizing Folksonomies in a Triadic Context," in KES-AMSTA, 2007, pp. 728-737, doi: 10.1007/978-3-540-72830-6_76.
 link: https://doi.org/10.1007/978-3-540-72830-6_76
