Update and rename scot.yaml to [IC]int.ere.st.yaml

--- a/content/publications/[IC]int.ere.st.yaml
+++ b/content/publications/[IC]int.ere.st.yaml
@@ -2,6 +2,5 @@ classification: Conferences
 publishedDate: 2008. 03. 26-28. 
 title: int.ere.st - Building a Tag Sharing Service with the SCOT Ontology
 author: H. Kim, J. Breslin, S.K. Yang and H.G. Kim
-description: In AAAI 2008 Spring Symposium on Social Information Processing. Stanford University. CA. USA. 2008.
+description: "int.ere.st - Building a Tag Sharing Service with the SCOT Ontology," in AAAI, 2008, pp. 42-47.
 link: https://www.aaai.org/Library/Symposia/Spring/2008/ss08-06-009.php 
-slug: scot
