--- a/content/publications/[IC]TowardsASalesAssistant.yaml
+++ b/content/publications/[IC]TowardsASalesAssistant.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2015. 11. 11
 title: Towards a Sales Assistant using a Product Knowledge Graph
 author: H. Kim, J.Y. Yang and J.S. Lee
-description: In Proceedings of The 14th International Semantic Web Conference. Bethlehem, Pennsylvania, USA, 2015.
+description: In Proceedings of The 14th International Semantic Web Conference. Bethlehem, Pennsylvania, USA, Nov. 11, 2015.
 link: http://km.aifb.kit.edu/sites/swc/2015/submissions/SWC2015_submission_5.pdf
