Update and rename review.yaml to [IC]ReviewandAlignment.yaml

--- a/content/publications/[IC]ReviewandAlignment.yaml
+++ b/content/publications/[IC]ReviewandAlignment.yaml
@@ -2,6 +2,5 @@ classification: Conferences
 publishedDate: 2008. 08. 04-07. 
 title: Review and Alignment of Tag Ontologies for Semantically-Linked Data in Collaborative Tagging Spaces
 author: H. Kim, A. Passant, J. Breslin, S. Scerri and S. Decker
-description: In Proceedings of the 2nd International Conference on Semantic Computing 2008. CA. USA. 2008.
-link: https://ieeexplore.ieee.org/abstract/document/4597207
-slug: review
+description: presented at the ICSC, Santa Monica, CA, USA, 315-322, 2008 
+link: https://doi.org/10.1109/ICSC.2008.79
