--- a/content/publications/[IJ]AnalysisOfStandard.yaml
+++ b/content/publications/[IJ]AnalysisOfStandard.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2019. 05. 15.
 title: Analysis of standard vocabulary use of the open government data - the case of the public data portal of Korea
 author: Haklae Kim
-description: Quality and Quantity, vol. 53, pp. 1611–1622, 2019.
+description: Quality and Quantity, vol. 53, pp. 1611–1622, Dec 2019.
 link: https://doi.org/10.1007/s11135-018-0829-z
