--- a/content/publications/[IC]AnalysisandRepresentationofTagging.yaml
+++ b/content/publications/[IC]AnalysisandRepresentationofTagging.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2009. 03. 23-25.
 title: Analysis and Representation of Tagging Practices in Online Communities
 author: H. Kim, S. Scerri, J. Breslin, S. Decker and H.G. Kim
-description: "Analysis and Representation of Tagging Practices in Online Communities," in AAAI, 2009, pp. 59-64.
+description: in AAAI, 2009, pp. 59-64.
 link: https://www.aaai.org/Library/Symposia/Spring/2009/ss09-08-014.php 
