--- a/content/publications/[IJ]CourseAnalysis.yaml
+++ b/content/publications/[IJ]CourseAnalysis.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2019. 12. 27.
 title: Course Analysis of Library and Information Science in Korea
 author: Yelim Mo, Euntaek Seon, Goun Park, and H. Kim
-description: Information, vol. 11, no. 1, p. 19, Dec. 2019.
+description: Information, vol. 11, no. 1, pp. 19, Dec 2019.
 link: https://doi.org/10.3390/info11010019
