--- a/content/publications/[IJ]InterlinkingOpenGovernment.yaml
+++ b/content/publications/[IJ]InterlinkingOpenGovernment.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2018. 03. 30.
 title: Interlinking Open Government Data in Korea using Administrative District Knowledge Graph
 author: Haklae Kim
-description: Journal of Information Science Theory and Practice, vol. 6, no. 1, pp. 18–30, 2018.
+description: Journal of Information Science Theory and Practice, vol. 6, no. 1, pp. 18–30, March 2018.
 link: https://doi.org/10.1633/JISTaP.2018.6.1.2
