--- a/content/publications/[IJ]TowardASales.yaml
+++ b/content/publications/[IJ]TowardASales.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2017. 05. 27.
 title: Towards a sales assistant using a product knowledge graph
 author: Haklae Kim
-description: Journal of Web Semantics, vol. 46–47, p.14-19, 2017.
+description: Journal of Web Semantics, vol. 46–47, pp. 14-19, Oct 2017.
 link: https://doi.org/10.1016/j.websem.2017.03.001
