--- a/content/publications/[IC]int.ere.st.yaml
+++ b/content/publications/[IC]int.ere.st.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2008. 03. 26-28. 
 title: int.ere.st - Building a Tag Sharing Service with the SCOT Ontology
 author: H. Kim, J. Breslin, S.K. Yang and H.G. Kim
-description: "int.ere.st - Building a Tag Sharing Service with the SCOT Ontology," in AAAI, 2008, pp. 42-47.
+description: presented at the AAAI Spring Symposium, Mar. 26-28, 2008.
 link: https://www.aaai.org/Library/Symposia/Spring/2008/ss08-06-009.php 
