--- a/content/publications/[IJ]EvolutionOfSocialNetworks.yaml
+++ b/content/publications/[IJ]EvolutionOfSocialNetworks.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2013. 04.
 title: Evolution of Social Networks based on Tagging Practices
 author: H. Kim, J. Breslin, H. Chao and L. Shu
-description: IEEE Transactions on Services Computing pp. 252-261, vol. 6
+description: IEEE Transactions on Services Computing. pp. 252-261, vol. 6, 2013
 link: https://www.computer.org/csdl/journal/sc/2013/02/tsc2013020252/13rRUxDIteE
