--- a/content/publications/[IC]TheStateoftheArt.yaml
+++ b/content/publications/[IC]TheStateoftheArt.yaml
@@ -2,6 +2,5 @@ classification: Conferences
 publishedDate: 2008. 09. 22-26.
 title: The State of the Art in Tag Ontologies - A Semantic Model for Tagging and Folksonomies
 author: H. Kim, S. Scerri, J. Breslin, S. Decker and H.G. Kim
-description: In Proceedings of the Dublin Core Conference 2008. Berlin, Germany. 2008.
-link: https://edoc.hu-berlin.de/handle/18452/1910 
-slug: art
+description: In Proceedings of the Dublin Core Conference 2008. Berlin, Germany, 2008, pp. 128-137.
+link: https://doi.org/10.18452/1258
