--- a/content/publications/[IJ]ConstructingAKnowledge.yaml
+++ b/content/publications/[IJ]ConstructingAKnowledge.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2017. 02. 01.
 title: Constructing a Knowledge Base for Entertainment by Interlinking Multiple Data Sources
-author: Haklae Kim, Jungyeon Yang
+author: Haklae Kim and Jungyeon Yang
 description: EAI Endorsed Transactions on Industrial Networks and Intelligent Systems, vol. 4, no. 10, Feb 2017.
 link: http://dx.doi.org/10.4108/eai.1-2-2017.152152
