Update and rename technologies.yaml to [IC]WhyDoFolksonomiesNeed.yaml

--- a/content/publications/[IC]WhyDoFolksonomiesNeed.yaml
+++ b/content/publications/[IC]WhyDoFolksonomiesNeed.yaml
@@ -1,7 +1,6 @@
 classification: Conferences
 publishedDate: 2010. 08. 12-15.
 title: Why Do Folksonomies Need Semantic Web Technologies?
-author: H. Kim AND J.H. Choi
+author: Haklae Kim AND Jaehwa Choi
 description: In Proceedings of 16th Americas Conference on Information Systems. Lima, Peru, 2010.
 link: https://aisel.aisnet.org/amcis2010/68/
-slug: technologies
