--- a/content/publications/[IC]WhyDoFolksonomiesNeed.yaml
+++ b/content/publications/[IC]WhyDoFolksonomiesNeed.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2010. 08. 12-15.
 title: Why Do Folksonomies Need Semantic Web Technologies?
-author: Haklae Kim AND Jaehwa Choi
+author: Haklae Kim and Jaehwa Choi
 description: In Proceedings of 16th Americas Conference on Information Systems. Lima, Peru, 2010.
 link: https://aisel.aisnet.org/amcis2010/68/
