--- a/content/publications/[IC]Gnosis-Knowledge-based.yaml
+++ b/content/publications/[IC]Gnosis-Knowledge-based.yaml
@@ -1,5 +1,5 @@
 classification: Conferences
 publishedDate: 2015. 10. 11-15.
 title: Gnosis - Knowledge-based Rich News Service
-author: J.Y. Yang, J.S. Lee and H. Kim
-description: In Proceedings of The 14th International Semantic Web Conference, Bethlehem, Pennsylvania, USA, Oct. 11-15, 2015.
+author: Jungyeon Yang, Jeongsoo Lee and Haklae Kim
+description: In Proceedings of The 14th International Semantic Web Conference, Bethlehem, Pennsylvania, USA, Oct 2015.
