--- a/content/publications/[IJ]EvolutionOfSocialNetworks.yaml
+++ b/content/publications/[IJ]EvolutionOfSocialNetworks.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2013. 04.
 title: Evolution of Social Networks based on Tagging Practices
-author: H. Kim, J. Breslin, H. Chao and L. Shu
-description: IEEE Transactions on Services Computing. pp. 252-261, vol. 6, 2013
+author: Haklae Kim, John G. Breslin, Han-Chieh Chao and Lei Shu
+description: IEEE Transactions on Services Computing. pp. 252-261, vol. 6, April 2013
 link: https://doi.org/10.1109/TSC.2011.54
