--- a/content/publications/[IC]ReviewandAlignment.yaml
+++ b/content/publications/[IC]ReviewandAlignment.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2008. 08. 04-07. 
 title: Review and Alignment of Tag Ontologies for Semantically-Linked Data in Collaborative Tagging Spaces
-author: H. Kim, A. Passant, J. Breslin, S. Scerri and S. Decker
+author: Haklae Kim, Alexandre Passant, John G. Breslin, Simon Scerri and Stefan Decker
 description: presented at the ICSC, Santa Monica, CA, USA, 315-322, 2008 
 link: https://doi.org/10.1109/ICSC.2008.79
