--- a/content/publications/[IJ]IntegratingTagging.yaml
+++ b/content/publications/[IJ]IntegratingTagging.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2011. 01
 title: Integrating Tagging into the Web of Data - Overview and Combination of Existing Tag Ontologies
-author: H. Kim, S. Scerri, A. Passant J. Breslin, AND H.G. Kim
-description: Journal of Internet Technology Vol. 12. No. 4:561-572, July 2011.
-link: https://www.researchgate.net/publication/289187120_Integrating_Tagging_into_the_Web_of_Data_Overview_and_Combination_of_Existing_Tag_Ontologies
+author: Haklae Kim, Simon Scerri, Alexandre Passant, John G. Breslin and Hong-Gee Kim
+description: Journal of Internet Technology Vol. 12. No. 4:561-572, Jul 2011.
+link: http://socialsemantics.org/files/publications/20110700_jit_2011.pdf
