--- a/content/publications/[IJ]MiningAndRepresenting.yaml
+++ b/content/publications/[IJ]MiningAndRepresenting.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2011. 5. 12.
 title: Mining and Representing User Interests - the Case of Tagging Practices
-author: H. Kim, J. G. Breslin, S. Decker and H.G Kim
-description: IEEE Transactions on Systems, Man, and Cybernetics, Part A - Systems and Humans, Vol. 41. No. 4:683-692, July 2011.
+author: Haklae Kim, John G. Breslin, Stefan Decker, Hong-Gee Kim
+description: IEEE Transactions on Systems, Man, and Cybernetics, Part A - Systems and Humans, Vol. 41. No. 4:683-692, Jul 2011.
 link: https://doi.org/10.1109/TSMCA.2011.2132709
