--- a/content/publications/[IJ]SemanticRepresentationForCopyright.yaml
+++ b/content/publications/[IJ]SemanticRepresentationForCopyright.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2010. 08. 10
 title: Semantic Representation for Copyright Metadata of User-Generated Content in Folksonomies
-author: H. Kim, J.H. Choi and J. G. Breslin
-description: Online Information Review, Vol. 34,  No. 4, pp. 626-641, August 2010.
+author: Haklae Kim, John Breslin, Jeahwa Choi
+description: Online Information Review, Vol. 34,  No. 4, pp. 626-641, Aug 2010.
 link: https://doi.org/10.1108/14684521011073025
