--- a/content/publications/[IC]TheStateoftheArt.yaml
+++ b/content/publications/[IC]TheStateoftheArt.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2008. 09. 22-26.
 title: The State of the Art in Tag Ontologies - A Semantic Model for Tagging and Folksonomies
-author: Haklae Kim, Simon Scerri, John G. Breslin, Stefan Decker, Honggee Kim
+author: Haklae Kim, Simon Scerri, John G. Breslin, Stefan Decker and Honggee Kim
 description: In Proceedings of the Dublin Core Conference 2008. Berlin, Germany, 2008, pp. 128-137.
 link: https://doi.org/10.18452/1258
