--- a/content/publications/[IC]ReviewandAlignment.yaml
+++ b/content/publications/[IC]ReviewandAlignment.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2008. 08. 04-07. 
 title: Review and Alignment of Tag Ontologies for Semantically-Linked Data in Collaborative Tagging Spaces
 author: Haklae Kim, Alexandre Passant, John G. Breslin, Simon Scerri and Stefan Decker
-description: presented at the ICSC, Santa Monica, CA, USA, 315-322, 2008 
+description: presented at the ICSC, Santa Monica, CA, USA, 2008, pp. 315-322.
 link: https://doi.org/10.1109/ICSC.2008.79
