--- a/content/publications/[IC]AnAgentEnvironmentforContextualizingFolksonomies.yaml
+++ b/content/publications/[IC]AnAgentEnvironmentforContextualizingFolksonomies.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2007. 05. 31. - 06. 01.
 title: An Agent Environment for Contextualizing Folksonomies in a Triadic Context
-author: Honggee Kim, Sukhyung Hwang, Yukyung Kang, Haklae Kim, Haesool Yang
+author: Honggee Kim, Sukhyung Hwang, Yukyung Kang, Haklae Kim and Haesool Yang
 description: In Proceedings of the The 1st KES Symposium on Agent and Multi-Agent Systems-Technologies and Applications, Wroclaw, Poland, 2007.
 link: https://doi.org/10.1007/978-3-540-72830-6_76
