--- a/content/publications/[P]Ontalk-Ontology-basedPersonal.yaml
+++ b/content/publications/[P]Ontalk-Ontology-basedPersonal.yaml
@@ -1,6 +1,6 @@
 classification: Posters
 publishedDate: 2004. 05. 19.
 title: Ontalk:Ontology-based Personal Document Management System
-author: Hak Lae Kim, Hong Gee Kim and Kyung Mo Park
+author: Haklae Kim, Hong-Gee Kim and Kyung-Mo Park
 description: presented at 13th International World Wide Web Conference, New York, USA, May, 19, 2004. DOI:10.1145/1013367.1013505
 link: https://dl.acm.org/doi/abs/10.1145/1013367.1013505
