--- a/content/publications/[W]HowSemanticDesktop.yaml
+++ b/content/publications/[W]HowSemanticDesktop.yaml
@@ -1,5 +1,5 @@
 classification: Workshops
 publishedDate: 2006. 09. 03-05.
 title: How Semantic Desktop and Web 2.0 can help Personal Knowledge Management?
-author: Hak Lae Kim, Hong Gee Kim and Stefan Decker
+author: Haklae Kim, Hong-Gee Kim and Stefan Decker
 description: presented at SWAT4LS at 1st ASWC, Beijing, China, Sep, 3-5, 2006.
