--- a/content/publications/[IC]SemanticDocumentationUsing.yaml
+++ b/content/publications/[IC]SemanticDocumentationUsing.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2006. 09. 25-28.
 title: Semantic Documentation using Semantic Web Technologies and Social Web Services
 author: Hak Lae Kim, Hong Gee Kim and Stefan Decker
-description: presented at NWeSP, Sep, 25-28, 2006, pp. 27-32, DOI: 10.1109/NWESP.2006.28.
+description: presented at NWeSP, Sep, 25-28, 2006, pp. 27-32.
 link: https://ieeexplore.ieee.org/document/4090001
