--- a/content/publications/[IC]AnalysisandRepresentationofTagging.yaml
+++ b/content/publications/[IC]AnalysisandRepresentationofTagging.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2009. 03. 23-25.
 title: Analysis and Representation of Tagging Practices in Online Communities
-author: Haklae Kim, Simon Scerri, John G. Breslin, Stefan Decker and Honggee Kim
+author: Haklae Kim, Simon Scerri, John G. Breslin, Stefan Decker and Hong-Gee Kim
 description: in AAAI, 2009, pp. 59-64.
 link: https://www.aaai.org/Library/Symposia/Spring/2009/ss09-08-014.php 
