--- a/content/publications/translating.yaml
+++ b/content/publications/translating.yaml
@@ -1,7 +1,6 @@
 classification: Workshops
 publishedDate: 2006. 10. 11-14.
 title: Translating Documents into Semantic Documents using Semantic Web and Web2.0
-author: H. Kim H.G. Kim, J.H. Choi and S. Decker
-description: In Proceedings of the 1st Semantic Authoring and Annotation Workshop (SAAW2006), Workshop at the 5th International Semantic Web Conference (ISWC 2006), 2006.
+author: Haklae Kim, Hong-Gee Kim, Jaehwa Choi, and Stefan Decker
+description: presentedt at the 1st SAAW2006, Workshop at the 5th ISWC, Oct, 11-14, 2006. 
 link: https://www.semanticscholar.org/paper/Translating-Documents-into-Semantic-Documents-using-Kim-Kim/17d3d0915b91086aec71e75479156fedbd55dd5e
-slug: translating
