--- a/content/publications/[IJ]IntegratingTagging.yaml
+++ b/content/publications/[IJ]IntegratingTagging.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2011. 01
 title: Integrating Tagging into the Web of Data - Overview and Combination of Existing Tag Ontologies
 author: Haklae Kim, Simon Scerri, Alexandre Passant, John G. Breslin and Hong-Gee Kim
-description: Journal of Internet Technology Vol. 12. No. 4:561-572, Jul 2011.
+description: Journal of Internet Technology vol. 12, no. 4, pp. 561-572, Jul 2011.
 link: http://socialsemantics.org/files/publications/20110700_jit_2011.pdf
