--- a/content/publications/[IJ]SocialSemanticCloudOfTags.yaml
+++ b/content/publications/[IJ]SocialSemanticCloudOfTags.yaml
@@ -1,6 +1,6 @@
 classification: Journals
 publishedDate: 2010. 02. 22
 title: Social Semantic Cloud of Tags - Semantic Model for Folksonomies
-author: Haklae Kim, John Breslin, Honggee Kim and Jaehwa Choi
-description: Knowledge Management Research & Practice, Vol. 8. No. 3:193-202, Feb 2010.
+author: Haklae Kim, John Breslin, Hong-Gee Kim and Jae-Hwa Choi
+description: Knowledge Management Research & Practice, vol. 8, no. 3, pp. 193-202, Feb 2010.
 link: https://doi.org/10.1057/kmrp.2010.10
