--- a/content/publications/[IC]int.ere.st.yaml
+++ b/content/publications/[IC]int.ere.st.yaml
@@ -1,6 +1,6 @@
 classification: Conferences
 publishedDate: 2008. 03. 26-28. 
 title: int.ere.st - Building a Tag Sharing Service with the SCOT Ontology
-author: Haklae Kim, John G. Breslin, Sungkwon Yang, Seongjae Song and Honggee Kim
+author: Haklae Kim, John G. Breslin, Sungkwon Yang, Seongjae Song and Hong-Gee Kim
 description: presented at the AAAI Spring Symposium, Mar. 26-28, 2008.
 link: https://www.aaai.org/Library/Symposia/Spring/2008/ss08-06-009.php 
