--- a/content/publications/[IJ]RepresentingAndSharing.yaml
+++ b/content/publications/[IJ]RepresentingAndSharing.yaml
@@ -2,5 +2,5 @@ classification: Journals
 publishedDate: 2010. 02. 01
 title: Representing and Sharing Folksonomies with Semantics
 author: Haklae Kim, Stefan Decker, John G. Breslin
-description: Journal of Information Science, Vol. 36. No. 1:57-72, Feb 2010.
+description: Journal of Information Science, vol. 36, no. 1, pp. 57-72, Feb 2010.
 link: https://doi.org/10.1177/0165551509346785
