--- a/content/publications/[DC]Ontology-basedElectronicDocument.yaml
+++ b/content/publications/[DC]Ontology-basedElectronicDocument.yaml
@@ -1,5 +1,5 @@
 classification: Domestic Conferences
 publishedDate: 2004. 06.
 title: Ontology-based Electronic Document Retrieval
-author: Hak Lae Kim and Hong Gee Kim
+author: Haklae Kim and Hong-Gee Kim
 description: presented at KIIS, Seoul, Korea, Jun, 2004.
