--- a/content/publications/[IC]IntelligentOntology-basedPersonal.yaml
+++ b/content/publications/[IC]IntelligentOntology-basedPersonal.yaml
@@ -1,5 +1,5 @@
 classification: Conferences
 publishedDate: 2004. 07. 21-25.
 title: Intelligent Ontology-based Personal Document Management and Retrieval System
-author: Hong Gee Kim and Hak Lae Kim
+author: Hong-Gee Kim and Haklae Kim
 description: presented at 1st CITSA, Jul, 21-25, 2004, Florida, USA.
