--- a/content/publications/[IC]TowardsAnEnterpriseEntityHub.yaml
+++ b/content/publications/[IC]TowardsAnEnterpriseEntityHub.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2016. 03. 20.
 title: Towards an Enterprise Entity Hub - Integration of General and Enterprise Knowledge
 author: Haklae Kim, Jeongsoo Lee, Jungyeon Yang
-description: Semantic Technology - 5th Joint International Conference, JIST 2015, Yichang, China, November 11-13, 2015, Revised Selected Papers. Volume 9544 of Lecture Notes in Computer Science, pages 301-310, Springer, 2015
+description: Semantic Technology - 5th Joint International Conference, JIST 2015, Yichang, China, November 11-13, 2015, Revised Selected Papers. Volume 9544 of Lecture Notes in Computer Science, Springer, 2015, pp. 301-310.
 link: http://dx.doi.org/10.1007/978-3-319-31676-5_22
