--- a/content/publications/[IC]IntegrationStrategiesForEnterprise.yaml
+++ b/content/publications/[IC]IntegrationStrategiesForEnterprise.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2016. 02. 04-06.
 title: Integration Strategies for Enterprise Knowledge Graphs
 author: Mikhail Galkin, Sören Auer, Haklae Kim, Simon Scerri
-description: 2016 IEEE Tenth International Conference on Semantic Computing (ICSC), Laguna Hills, California, USA, 2016, pp. 242-245
+description: 2016 IEEE Tenth International Conference on Semantic Computing (ICSC), Laguna Hills, California, USA, 2016, pp. 242-245.
 link: https://doi.org/10.1109/ICSC.2016.24
