--- a/content/publications/[IC]Gnosis-Knowledge-based.yaml
+++ b/content/publications/[IC]Gnosis-Knowledge-based.yaml
@@ -2,4 +2,4 @@ classification: Conferences
 publishedDate: 2015. 10. 11-15.
 title: Gnosis - Knowledge-based Rich News Service
 author: Jungyeon Yang, Jeongsoo Lee and Haklae Kim
-description: In Proceedings of The 14th International Semantic Web Conference, Bethlehem, Pennsylvania, USA, Oct 2015.
+description: In Proceedings of The 14th International Semantic Web Conference, Bethlehem, Pennsylvania, USA, 2015.
