--- a/content/publications/[IC]SemanticDataFusion.yaml
+++ b/content/publications/[IC]SemanticDataFusion.yaml
@@ -2,5 +2,5 @@ classification: Conferences
 publishedDate: 2013. 10. 21-25.
 title: Semantic Data Fusion - from Open Data to Linked Data
 author: Haklae Kim, Jungsung Son, and Kisoog Jang
-description: Semantic Web Challenge 2013 at The 12th International Semantic Web Conference, Sydney, Australia. Oct 2013.
+description: Semantic Web Challenge 2013 at The 12th International Semantic Web Conference, Sydney, Australia. 2013.
 link: http://km.aifb.kit.edu/sites/swc/2013/submissions/swc2013_submission_16.pdf
